--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
-div{
+main{
     background-color: red;
-    height: 200px;
+    text-align: center;
+}
+div.list{
+    width: 30%;
+    display: inline-block;
+    background-color: blue;
+}
+h2{
+    margin: 0%;
+}
+.add{
+    border-radius: 50%;
 }
