--- a/style.css
+++ b/style.css
@@ -1,15 +1,59 @@
-main{
+* {
+  padding: 0;
+  margin: 0;
+}
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+main {
+  background-color: red;
+  text-align: center;
+  justify-content: content;
+}
+.alllist {
+  height: 100%;
+  width: 100%;
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr;
+  width: 70%;
+  height: 75%;
+}
+
+div .alllist:nth-of-type() div.list {
+  width: 30%;
+  display: inline-block;
+  background-color: blue;
+}
+h2 {
+  margin: 0%;
+}
+.add {
+  border-radius: 50%;
+}
+@media screen and (orientation: landscape) {
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  main {
     background-color: red;
     text-align: center;
-}
-div.list{
-    width: 30%;
-    display: inline-block;
-    background-color: blue;
-}
-h2{
-    margin: 0%;
-}
-.add{
-    border-radius: 50%;
+    justify-content: content;
+  }
+  .alllist {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: 5fr 1fr;
+    grid-template-columns: 2fr 1fr 1fr;
+    grid-row: 1/2;
+    grid-column: 1/4;
+    width: 70%;
+    height: 75%;
+  }
 }
