--- a/style.css
+++ b/style.css
@@ -23,9 +23,7 @@ main {
   height: 75%;
 }
 
-div .alllist:nth-of-type() div.list {
-  width: 30%;
-  display: inline-block;
+div.list {
   background-color: blue;
 }
 h2 {
@@ -34,26 +32,44 @@ h2 {
 .add {
   border-radius: 50%;
 }
+
+button {
+  display: inline-block;
+  color: #eeeeee;
+  text-align: center;
+  font-size: 5px;
+  padding: 1px;
+  width: 8px;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -o-transition: all 0.5s;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+button:hover {
+}
+
 @media screen and (orientation: landscape) {
   body {
-    display: flex;
+    display: initial;
     align-items: center;
     justify-content: center;
   }
   main {
+    display: flex;
     background-color: red;
     text-align: center;
     justify-content: content;
   }
   .alllist {
-    height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: 5fr 1fr;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-row: 1/2;
-    grid-column: 1/4;
-    width: 70%;
-    height: 75%;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+  }
+  .list {
+    width: 90%;
+    margin: 5px;
   }
 }
