--- a/style.css
+++ b/style.css
@@ -33,21 +33,21 @@ h2 {
   border-radius: 50%;
 }
 
-button {
+button.add {
   display: inline-block;
   color: #eeeeee;
   text-align: center;
   font-size: 5px;
   padding: 1px;
   width: 8px;
-  -webkit-transition: all 0.5s;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
 }
 button:hover {
+}
+button.sup {
+  background-color: red;
 }
 
 @media screen and (orientation: landscape) {
