--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,12 @@ nav {
 
 }
 
+.Logo:hover {
+    -ms-transform: scale(2);
+    -webkit-transform: scale(2);
+    transform: scale(2);
+}
+
 h1 {
     display: none;
 }
@@ -27,12 +33,6 @@ h1 {
     font-size: large;
     font-weight: bold;
 }
-
-
-
-
-
-
 
 .couleur {
     padding-right: 1rem;
@@ -80,6 +80,10 @@ h1 {
 
 }
 
+.add {
+    display: none;
+}
+
 @media screen and (min-width: 1000px) {
     nav {
         border: 1px solid #e7e7e7;
@@ -89,6 +93,10 @@ h1 {
         justify-content: space-between;
         align-items: center;
         position: initial;
+    }
+
+    .Logo:hover {
+        transform: rotate(359deg);
     }
 
     #Ajouter {
@@ -107,6 +115,18 @@ h1 {
         display: none;
         font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
+    }
+
+    .add {
+        height: 5rem;
+        width: 5rem;
+        border-color: rgb(130, 3, 3);
+        border-radius: 50%;
+        font-size: large;
+        position: absolute;
+        bottom: 1rem;
+        right: 1rem;
+        display: block;
     }
 
 
