--- a/style.css
+++ b/style.css
@@ -29,25 +29,31 @@ div.list {
 h2 {
   margin: 0%;
 }
-.add {
-  border-radius: 50%;
+button {
+  width: auto;
+  height: auto;
+  font-size: 1rem;
 }
 
 button.add {
-  display: inline-block;
-  color: #eeeeee;
-  text-align: center;
-  font-size: 5px;
-  padding: 1px;
-  width: 8px;
-  transition: all 0.5s;
-  cursor: pointer;
-  margin: 5px;
+  border-radius: 50%;
+  color: black;
+  border: none;
+  margin-right: 5px;
 }
-button:hover {
+button.add:hover {
+  background-color: yellow;
+  color: black;
 }
 button.sup {
+  color: red;
+  width: auto;
+  height: auto;
+  border: none;
+}
+button.sup:hover {
   background-color: red;
+  color: black;
 }
 
 @media screen and (orientation: landscape) {
