--- a/css/style.css
+++ b/css/style.css
@@ -24,12 +24,15 @@ nav {
   -webkit-transform: scale(2);
   transform: scale(2);
 }
+
 p.textnom {
   display: inline-block;
 }
-.check, .check p {
+
+.check,
+.check p {
   color: #666;
-  text-decoration:line-through;
+  text-decoration: line-through;
 }
 
 .list {
@@ -93,6 +96,8 @@ h1 {
 .titre {
   display: flex;
   justify-content: center;
+  padding: 16px;
+  border: double;
 
 }
 
