--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 * {
   padding: 0;
   margin: 0;
+
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -63,17 +65,18 @@ h1 {
 }
 
 #Couleur1 {
-  background-color: #b6d8f2;
+  background-color: #a7001e;
   border-radius: 30%;
-  height: 1rem;
-  width: 1rem;
+  height: 1.5rem;
+  width: 1.5rem;
+  ;
 }
 
 #Couleur2 {
   border-radius: 30%;
   background-color: #b693fc;
-  height: 1rem;
-  width: 1rem;
+  height: 1.5rem;
+  width: 1.5rem;
 }
 
 
@@ -81,15 +84,15 @@ h1 {
 #Couleur3 {
   border-radius: 30%;
   background-image: url("img/bois4.png");
-  height: 1rem;
-  width: 1rem;
+  height: 1.5rem;
+  width: 1.5rem;
 }
 
 
 #Couleur4 {
   border-radius: 30%;
-  height: 1rem;
-  width: 1rem;
+  height: 1.5rem;
+  width: 1.5rem;
   background-color: #a4bd0a;
 }
 
@@ -150,6 +153,7 @@ button.sup {
   width: auto;
   height: auto;
   border: none;
+  background-image: url("/img/croix.png");
 }
 
 button.sup:hover {
