--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-body {
-  align-items: center;
-}
-
 nav {
   background-color: #f3f3f3;
   color: #666;
@@ -31,7 +27,12 @@ p.textnom {
   display: inline-block;
 }
 
-.check,
+.no-check button{
+  border: double;
+  background-color: transparent;
+  width: 2rem;
+  height: 2rem;
+}
 .check p {
   color: #666;
   text-decoration: line-through;
@@ -120,9 +121,6 @@ main {
   height: 100%;
   width: 100%;
   flex-direction: column;
-  /* display: grid;
-  grid-template-rows: auto;
-  grid-template-columns: 100%; */
 }
 
 h2 {
@@ -140,19 +138,20 @@ button.add {
   color: black;
   border: none;
   margin-right: 5px;
+  background-image: url("../img/ajouter.png");
+  background-size: cover;
+  width: 2rem;
+  height: 2rem;
 }
 
-button.add:hover {
-  background-color: yellow;
-  color: black;
-}
 
 button.sup {
   color: red;
   width: 2rem;
   height: 2rem;
   border: none;
-  background-image: url("https://static.vecteezy.com/ti/vecteur-libre/p3/4223162-sale-grunge-dessin-a-la-main-avec-coups-de-pinceau-croix-x-vector-illustration-isole-sur-fond-blanc-mark-graphic-design-check-mark-symbol-no-button-for-vote-in-check-box-web-etc-gratuit-vectoriel.jpg");
+  background-color: transparent;
+  background-image: url("../img/croix.png");
   background-size: cover;
 }
 
@@ -168,7 +167,14 @@ button.sup {
     text-align: center;
     justify-content: content;
   }
-
+  .no-check button{
+    width: 1rem;
+    height: 1rem;
+  }
+  button.add{
+    width: 1rem;
+    height: 1rem;
+  }
   button.sup {
     width: 1rem;
     height: 1rem;
