--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ nav {
   position: fixed;
   bottom: 0px;
   width: 100%;
-
 }
 
 .Logo:hover {
@@ -27,9 +26,10 @@ nav {
 p.textnom {
   display: inline-block;
 }
-.check, .check p {
+.check,
+.check p {
   color: #666;
-  text-decoration:line-through;
+  text-decoration: line-through;
 }
 
 .list {
@@ -56,7 +56,6 @@ h1 {
   float: right;
   height: 2.5rem;
   width: 100px;
-
 }
 
 #Couleur1 {
@@ -73,15 +72,12 @@ h1 {
   width: 1rem;
 }
 
-
-
 #Couleur3 {
   border-radius: 30%;
   background-image: url("img/bois4.png");
   height: 1rem;
   width: 1rem;
 }
-
 
 #Couleur4 {
   border-radius: 30%;
@@ -93,7 +89,6 @@ h1 {
 .titre {
   display: flex;
   justify-content: center;
-
 }
 
 .Ajouter {
@@ -157,12 +152,14 @@ button.sup:hover {
     display: initial;
     align-items: center;
     justify-content: center;
+    width: 100%;
   }
 
   main {
     display: flex;
     text-align: center;
     justify-content: content;
+    width: 100%;
   }
 
   .alllist {
@@ -204,8 +201,7 @@ button.sup:hover {
 
   .titre {
     display: none;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-
+    font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   }
 
   .Ajouter {
@@ -219,5 +215,4 @@ button.sup:hover {
     right: 1rem;
     display: block;
   }
-
 }
