--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ h1 {
 
 #Couleur3 {
   border-radius: 30%;
-  background-image: url("img/bois4.png");
+  background-image: url("../img/bois4.png");
 }
 
 
