--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 nav {
-  background-color: #f3f3f3;
+  background: #E5E5E5;
   color: #666;
   display: flex;
   justify-content: space-around;
@@ -71,45 +71,50 @@ h1 {
   display: flex;
   justify-content: space-between;
   float: right;
-  height: 2.5rem;
   width: 100px;
-
+  flex-wrap: wrap;
 }
 
 .color {
   width: 2rem;
   height: 2rem;
+  border-radius: 30%;
 }
 
 #Couleur1 {
   background-color: #a7001e;
-  border-radius: 30%;
 }
 
 #Couleur2 {
-  border-radius: 30%;
   background-color: #b693fc;
 }
 
-
-
 #Couleur3 {
-  border-radius: 30%;
   background-image: url("../img/bois4.png");
 }
 
 
 #Couleur4 {
-  border-radius: 30%;
   background-color: #a4bd0a;
+}
+
+#Couleur5 {
+  background-color: gray;
+}
+
+#CouleurWild{
+  background-color: #F7146B;
+}
+
+#CouleurSombre{
+  background-color: black;
 }
 
 .titre {
   display: flex;
   justify-content: center;
   padding: 16px;
-  border: double;
-
+ background: #E5E5E5;
 }
 
 .Ajouter {
@@ -211,7 +216,7 @@ button.sup {
   }
 
   nav {
-    background-color: #f3f3f3;
+    background: #E5E5E5;
     color: #666;
     display: flex;
     justify-content: space-between;
