--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ p.textnom {
   width: 2rem;
   height: 2rem;
 }
+
 .check button {
   border: double;
   background-color: gray;
@@ -102,11 +103,11 @@ h1 {
   background-color: gray;
 }
 
-#CouleurWild{
+#CouleurWild {
   background-color: #F7146B;
 }
 
-#CouleurSombre{
+#CouleurSombre {
   background-color: black;
 }
 
@@ -114,7 +115,7 @@ h1 {
   display: flex;
   justify-content: center;
   padding: 16px;
- background: #E5E5E5;
+  background: #E5E5E5;
 }
 
 .Ajouter {
@@ -167,6 +168,33 @@ button.sup {
   background-size: cover;
 }
 
+.Logo {
+  position: relative;
+  animation-name: start;
+  animation-duration: 4s;
+}
+
+@keyframes startlist {
+  0% {
+    transform: scale(0.1);
+  }
+}
+
+@keyframes start {
+  0% {
+    left: 0%;
+  }
+
+  50% {
+    transform: rotate(360deg);
+    left: 90%;
+  }
+
+  100% {
+    left: 0%;
+  }
+}
+
 @media screen and (orientation: landscape) {
   body {
     display: initial;
@@ -184,10 +212,12 @@ button.sup {
     width: 1rem;
     height: 1rem;
   }
+
   .check button {
     width: 1rem;
     height: 1rem;
   }
+
   button.add {
     width: 1rem;
     height: 1rem;
