changement et ajout de couleur

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ h1 {
 }
 
 #Couleur5 {
-  background-color: gray;
+  background-color: #4a919e;
 }
 
 #CouleurWild {
@@ -176,7 +176,7 @@ button.sup {
   animation-duration: 4s;
 }
 
-p.nume{
+p.nume {
   display: flex;
   justify-content: center;
   vertical-align: baseline;
