test clock again again

--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ p.nume{
   /* clock */
 }
 .clock {
-  position:absolute;
-  color: #F7146B;
-  font-size:large ;
+  position:relative;
+  
+  font-size:x-large ;
 }
