--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,7 @@ p.nume {
     border-color: rgb(130, 3, 3);
     border-radius: 50%;
     font-size: large;
-    position: absolute;
+    position: fixed;
     bottom: 1rem;
     right: 1rem;
     display: block;
