--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ p.textnom {
   display: initial;
   word-wrap: break-word;
   width: 90%;
-  margin-top: 1rem;
+  margin: 1rem;
 }
 
 h1 {
@@ -250,6 +250,8 @@ p.nume {
     display: grid;
     grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
     justify-items: center;
+    align-items: start;
+    padding-top: 2rem;
   }
 
   .list {
