--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 nav {
   border-top: solid 1px;
-  border-color:  gray;
+  border-color: gray;
   background: #E5E5E5;
   color: #666;
   display: flex;
@@ -17,6 +17,14 @@ nav {
   bottom: 0px;
   width: 100%;
 
+}
+
+.nomlist {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  border-top: 1px solid;
+  padding: 5px;
 }
 
 .Logo:hover {
@@ -51,13 +59,14 @@ p.textnom {
 
 .list {
   border: solid 1px;
-  border-color:  gray;
+  border-color: gray;
   display: initial;
   word-wrap: break-word;
   width: 90%;
   margin-top: 1rem;
 }
-.text{
+
+.text {
   margin: 1rem;
 }
 
