--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,19 @@ nav {
 
 }
 
+p.lab {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 7px;
+}
+
 .nomlist {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   border-top: 1px solid;
   padding: 5px;
+  align-items: center;
 }
 
 .Logo:hover {
@@ -36,6 +43,7 @@ nav {
 p.textnom {
   display: inline-block;
   font-size: 1.5rem;
+  max-width: 75%;
 }
 
 .no-check button {
